<resources>
    <string name="app_name">DMC2</string>
    <string name="toolbar_back_text">뒤로가기</string>

    <!-- Main -->
    <string name="main_introduce">DMC에서 한눈에 보다.</string>

    <!-- Cuisine -->
    <string name="cuisine_title_id0">한식</string>
    <string name="cuisine_title_id1">중식</string>
    <string name="cuisine_title_id2">분식</string>
    <string name="cuisine_title_id3">양식</string>
    <string name="cuisine_title_id4">일식</string>
    <string name="cuisine_title_id5">패스트푸드</string>
    <string name="cuisine_title_id6">고깃집</string>
    <string name="cuisine_title_id7">치킨</string>
    <string name="cuisine_title_id8">카페</string>
    <string name="cuisine_title_id9">마트</string>
    <string name="cuisine_title_id10">술집</string>
    <string name="cuisine_title_total">전체</string>

    <!-- card_news -->
    <string name="item_card_news_read_more"><u>더보기</u></string>

    <!-- food_recommend -->
    <string name="food_recommend_main_button_text">확인</string>
    <string name="food_recommend_total_cuisine_view_title">전체</string>
    <string name="food_recommend_title">오늘은 어떤 게 좋을까?</string>
    <string name="food_recommend_description">💡원하는 종류를 선택해 주세요.</string>
    <string name="item_food_recommend_prefix">아무래도\n오늘은</string>
    <string name="item_food_recommend_card_button_detail">자세히 보기</string>
    <string name="item_food_recommend_card_button_map">지도</string>
    <string name="item_food_recommend_card_require_time">8호관 기준 : 도보 <b>%s</b></string>
    <string name="food_recommend_detail_web_exception_finish_message">예기치 못한 상황으로 종료되었습니다</string>

    <!-- hit_and_miss -->
    <string name="hit_counter_title">오늘은 누가 걸릴까?</string>
    <string name="hit_counter_description">걸릴 사람 수를 고르자</string>
    <string name="hit_counter_button_done">시작하기</string>
    <string name="hit_and_miss_title">각자 한 장씩 카드를 뒤집자!</string>
    <string name="hit_and_miss_card_hit">오늘은\n너야.</string>
    <string name="hit_and_miss_card_miss">통과</string>

    <!-- school_around_map -->
    <string name="menu_filter_title">필터</string>
    <string name="school_around_map_guide">필터 아이콘을 클릭해보세요 👉</string>
    <string name="dialog_map_filter_title">카테고리를 골라주세요</string>
    <string name="dialog_map_filter_button_done">선택완료</string>
    <string name="marker_detail_operation_hours">운영시간: %s</string>
    <string name="marker_detail_required_time">소요시간: 8호관 기준 도보로부터 <b>%s</b></string>
    <string name="marker_detail_link_naver_detail"><u>자세히 보기</u></string>
    <string name="marker_school_description">모든 가게는 8호관으로부터 도보로부터\n걸리는 시간을 측정했습니다.</string>

    <!-- inquiry -->
    <string name="inquiry_introduce">안녕하세요\nDMC 개발자입니다.</string>
    <string name="inquiry_email_hint">답변 받으실 이메일 주소를 입력해주세요.</string>
    <string name="inquiry_email_title">답변 받으실 이메일</string>
    <string name="inquiry_type_title">문의 유형</string>
    <string name="inquiry_content_title">문의 내용</string>
    <string name="inquiry_content_text_max_length">500자 이내</string>
    <string name="inquiry_content_hint">문의 내용을 작성해주세요.</string>
    <string name="inquiry_button_done">작성 완료</string>

    <!-- main_ad -->
    <string name="main_ad_title">DMC를 함께 만들어 가실 분을 찾습니다.</string>
    <string name="main_ad_content">저희와 함께할 개발자, 혹은 디자이너, 기획자 분들이 계신다면 문의하기를 통해 연락주세요 :)</string>
    <string name="main_ad_read_more"><u>더보기</u></string>

    <!-- main_copyright -->
    <string name="main_copyright">ⓒ2023.Monthly Coding all rights Reserved.\nⓒ2022–2023 Cat.LLC Icons by Icons8</string>

    <!-- splash -->
    <string name="splash_content"><b>동양미래대학교 학생들</b>을 위한\n<b>학교생활, DMC</b>에서 한 눈에 보다.</string>

    <!--BASE ERROR-->
    <string name="error_baseFragment">"[ERROR]Binding no initialization"</string>

    <!-- dialog_prepare_for_update -->
    <string name="dialog_prepare_for_update_title">DMC 업데이트 중~</string>
    <string name="dialog_prepare_for_update_content">학교를 대표하는 앱이 되기 위해\n새단장중입니다!</string>
    <string name="dialog_prepare_for_update_cancel">닫기</string>
</resources>
