<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        tools:context=".presenter.inquiry.InquiryActivity">

        <TextView
            android:id="@+id/tv_inquiry_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inquiry_introduce"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_inquiry_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/inquiry_email_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inquiry_introduce" />

        <EditText
            android:id="@+id/et_inquiry_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/inquiry_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inquiry_email_title" />

        <TextView
            android:id="@+id/tv_inquiry_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/inquiry_type_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_inquiry_email" />

        <Spinner
            android:id="@+id/spinner_inquiry_type"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inquiry_type_title" />

        <View
            android:id="@+id/view_inquiry_type_under_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_inquiry_type" />

        <TextView
            android:id="@+id/tv_inquiry_content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/inquiry_content_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_inquiry_type_under_line" />

        <TextView
            android:id="@+id/tv_inquiry_content_text_max_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/inquiry_content_text_max_length"
            app:layout_constraintBottom_toBottomOf="@id/tv_inquiry_content_title"
            app:layout_constraintStart_toEndOf="@id/tv_inquiry_content_title" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:weightSum="1"
            app:counterEnabled="true"
            app:counterMaxLength="500"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/tv_inquiry_button_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inquiry_content_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_inquiry_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/inquiry_content_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_inquiry_button_done"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_button_radius_10"
            android:gravity="center"
            android:text="@string/inquiry_button_done"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
