<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onCardButtonClickListener"
            type="com.monthlycoding.dmc2.presenter.foodrecommendcards.FoodRecommendCardButtonClickListener" />

        <variable
            name="cuisine"
            type="com.monthlycoding.dmc2.presenter.foodrecommend.model.Cuisine" />

        <variable
            name="foodRecommend"
            type="com.monthlycoding.dmc2.presenter.foodrecommendcards.model.FoodRecommendUiModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_food_recommend_card"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_item_food_recommend_card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/item_food_recommend_prefix"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_food_recommend_card_cuisine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{cuisine.title}"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_food_recommend_card_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_food_recommend_card_title"
            tools:text="한식" />

        <ImageView
            android:id="@+id/iv_item_food_recommend_card"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_food_recommend_card_cuisine"
            app:layout_constraintStart_toEndOf="@+id/tv_item_food_recommend_card_cuisine"
            app:layout_constraintTop_toTopOf="@+id/tv_item_food_recommend_card_cuisine"
            app:setDrawableResource="@{cuisine.icon}"
            tools:src="@drawable/ic_cuisine_korean" />

        <View
            android:id="@+id/view_item_food_recommend_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/blue01_264790"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_food_recommend_card_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@{foodRecommend.storeName}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_item_food_recommend_divider"
            tools:text="써브웨이" />

        <TextView
            android:id="@+id/tv_item_food_recommend_card_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{foodRecommend.address}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_food_recommend_card_store_name"
            tools:text="서울시 구로구 고척동 xx-xx" />

        <TextView
            android:id="@+id/tv_item_food_recommend_card_operation_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{foodRecommend.operationHours}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_food_recommend_card_address"
            tools:text="10:00~22:00" />

        <TextView
            android:id="@+id/tv_item_food_recommend_card_closed_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{foodRecommend.closedDays}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_food_recommend_card_operation_hours"
            tools:text="목요일 휴무" />

        <TextView
            android:id="@+id/tv_item_food_recommend_card_required_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{foodRecommend.requiredTime}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_food_recommend_card_closed_days"
            tools:text="8호관 기준 도보 8분" />

        <TextView
            android:id="@+id/tv_item_food_recommend_card_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onCardButtonClickListener.onDetailClick(foodRecommend.naverLink, foodRecommend.storeName)}"
            android:padding="10dp"
            android:text="@string/item_food_recommend_card_button_detail"
            android:textColor="@color/blue01_264790"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_item_food_recommend_card_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:onClick="@{() -> onCardButtonClickListener.onMapClick(foodRecommend)}"
            android:padding="10dp"
            android:text="@string/item_food_recommend_card_button_map"
            android:textColor="@color/blue01_264790"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_food_recommend_card_detail"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_food_recommend_card_detail"
            app:layout_constraintTop_toTopOf="@+id/tv_item_food_recommend_card_detail" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
